<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:orientation="vertical"
    tools:context="com.couchsurfing.couchsurfingquiz.Question1">

    <Button
        android:id="@+id/submitq2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="goSubmit"
        android:text="submit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/question"
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_2" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/response1"
            style="@style/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/response1" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/response2"
            style="@style/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/response2" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/response3"
            style="@style/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/response3" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/response4"
            style="@style/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/response4" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/response5"
            style="@style/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/response5" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/response6"
            style="@style/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/response6" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/response7"
            style="@style/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/response7" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/response8"
            style="@style/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/response8" />

    </LinearLayout>
</RelativeLayout>
