<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context="com.couchsurfing.couchsurfingquiz.MainActivity">

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/start" />
    <EditText
        android:id="@+id/name"
        style="@style/question"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/start"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/ready"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/name"
        android:padding="16dp"
        android:text="@string/ready"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ready"
        android:padding="16dp"
        android:text="@string/introduction"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon"
        android:layout_below="@id/start"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>